@@ -1,4 +1,4 @@
-package it.pagopa.pn.downtime.service;
+package it.pagopa.pn.downtime.service.impl;
 
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
@@ -6,14 +6,16 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMapper;
@@ -21,42 +23,34 @@ import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBQueryExpression;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBScanExpression;
 import com.amazonaws.services.dynamodbv2.model.AttributeValue;
 
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnDowntimeEntry;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnDowntimeHistoryResponse;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnFunctionality;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnFunctionalityStatus;
+import it.pagopa.pn.downtime.generated.openapi.server.v1.dto.PnStatusResponse;
 import it.pagopa.pn.downtime.mapper.DowntimeLogsMapper;
 import it.pagopa.pn.downtime.model.DowntimeLogs;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnDowntimeEntry;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnDowntimeHistoryResponse;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnFunctionality;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnFunctionalityStatus;
-import it.pagopa.pn.downtime.pn_downtime_logs.model.PnStatusResponse;
+import it.pagopa.pn.downtime.service.DowntimeLogsService;
 import it.pagopa.pn.downtime.util.DowntimeLogUtil;
+import lombok.CustomLog;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 
-/**
- * The Class DowntimeLogsServiceImpl.
- */
 @Service
-
-/**
- * Instantiates a new downtime logs service impl.
- */
 @RequiredArgsConstructor
-
-/** The Constant log. */
-@Slf4j
+@CustomLog
 public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 
-	/** The dynamo DB mapper. Log */
 	@Autowired
 	private DynamoDBMapper dynamoDBMapper;
 
-	/** The downtime logs mapper. */
 	@Autowired
-	DowntimeLogsMapper downtimeLogsMapper;
-	
+	private DowntimeLogsMapper downtimeLogsMapper;
+
 	@Value("${history.index}")
 	private String historyIndex;
 
+	@Value("${amazon.dynamodb.log.endpoint}")
+	private String downtimeLogsTableName;
 	/**
 	 * Gets the status history.
 	 *
@@ -70,13 +64,13 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 	@Override
 	public PnDowntimeHistoryResponse getStatusHistory(OffsetDateTime fromTime, OffsetDateTime toTime,
 			List<PnFunctionality> functionality, String page, String size) {
-
+		
 		log.info("getStatusHistory - Input - fromTime: " + fromTime.toString() + " toTime: "
 				+ (toTime != null ? toTime.toString() : "") + " functionality: "
 				+ (functionality != null ? functionality.toString() : "") + " page: " + page + " size: " + size);
 
 		List<DowntimeLogs> listHistoryResults = getStatusHistoryResults(fromTime, toTime, functionality);
-		
+
 		Page<DowntimeLogs> pageHistory = null;
 
 		if (page != null && !page.isEmpty() && size != null && !size.isEmpty()) {
@@ -130,7 +124,8 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 		}
 
 		Map<String, AttributeValue> attributes = new HashMap<>();
-		List<String> values = functionality.stream().map(PnFunctionality::getValue).collect(Collectors.toList());
+
+		List<String> values = functionality.stream().filter(Objects::nonNull).map(PnFunctionality::getValue).toList();
 
 		String expression = "";
 		for (String s : values) {
@@ -142,9 +137,12 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 		String filter = "functionality in (" + expression.substring(0, expression.length() - 1) + ")";
 		if (toTime != null) {
 			attributes.put(":endDate1", new AttributeValue().withS(toTime.toString()));
-			filter = filter.concat(" and  (startDateAttribute BETWEEN :startDate1 AND :endDate1 or  endDate BETWEEN :startDate1 AND :endDate1)");
+			filter = filter.concat(
+					" and  (startDateAttribute BETWEEN :startDate1 AND :endDate1 or endDate BETWEEN :startDate1 AND :endDate1 or (startDateAttribute < :startDate1 and (endDate > :endDate1 or attribute_not_exists(endDate))))");
 		} else {
-			filter = filter.concat(" and  (startDateAttribute > :startDate1  or endDate > :startDate1 and startDateAttribute < :startDate1 )");
+			filter = filter.concat(
+					" and  (startDateAttribute > :startDate1 or endDate > :startDate1 or (startDateAttribute < :startDate1 and attribute_not_exists(endDate)))");
+
 		}
 
 		DynamoDBQueryExpression<DowntimeLogs> queryExpression = new DynamoDBQueryExpression<DowntimeLogs>()
@@ -166,23 +164,33 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 	public PnStatusResponse currentStatus() {
 		List<PnDowntimeEntry> openIncidents = new ArrayList<>();
 		PnStatusResponse pnStatusResponseEntry = new PnStatusResponse();
-		for (PnFunctionality pn : PnFunctionality.values()) {
-			Map<String, AttributeValue> eav1 = new HashMap<>();
-			eav1.put(":functionality1", new AttributeValue().withS(pn.getValue()));
-			DynamoDBScanExpression scanExpression = new DynamoDBScanExpression()
-					.withFilterExpression("functionality =:functionality1 and  attribute_not_exists(endDate) ")
-					.withExpressionAttributeValues(eav1);
+		try {
+			for (PnFunctionality pn : PnFunctionality.values()) {
+				Map<String, AttributeValue> eav1 = new HashMap<>();
+				eav1.put(":functionality1", new AttributeValue().withS(pn.getValue()));
+				DynamoDBScanExpression scanExpression = new DynamoDBScanExpression()
+						.withFilterExpression("functionality =:functionality1 and  attribute_not_exists(endDate) ")
+						.withExpressionAttributeValues(eav1);
 
-			List<DowntimeLogs> logs = dynamoDBMapper.parallelScan(DowntimeLogs.class, scanExpression, 3);
+				List<DowntimeLogs> logs = dynamoDBMapper.parallelScan(DowntimeLogs.class, scanExpression, 3);
 
-			if (logs != null && !logs.isEmpty() && PnFunctionalityStatus.KO.equals(logs.get(0).getStatus())) {
-				PnDowntimeEntry incident = downtimeLogsMapper.downtimeLogsToPnDowntimeEntry(logs.get(0));
-				openIncidents.add(incident);
+				if (logs != null && !logs.isEmpty() && PnFunctionalityStatus.KO.equals(logs.get(0).getStatus())) {
+					PnDowntimeEntry incident = downtimeLogsMapper.downtimeLogsToPnDowntimeEntry(logs.get(0));
+					openIncidents.add(incident);
+				}
 			}
+			pnStatusResponseEntry.setFunctionalities(Arrays.asList(PnFunctionality.values()));
+			pnStatusResponseEntry.setOpenIncidents(openIncidents);
+			pnStatusResponseEntry.setStatus(HttpStatus.OK.value());
+			pnStatusResponseEntry.setTitle(HttpStatus.OK.name());
+			pnStatusResponseEntry.setDetail(HttpStatus.OK.name());
+            log.info("Response: " + pnStatusResponseEntry.toString());
+		} catch (Exception e) {
+			log.error("Error occurred while fetching current status: ", e);
+			pnStatusResponseEntry.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+			pnStatusResponseEntry.setTitle(PnFunctionalityStatus.KO.name());
+			pnStatusResponseEntry.setDetail(PnFunctionalityStatus.KO.name());
 		}
-		pnStatusResponseEntry.setFunctionalities(Arrays.asList(PnFunctionality.values()));
-		pnStatusResponseEntry.setOpenIncidents(openIncidents);
-		log.info("Response: " + pnStatusResponseEntry.toString());
 		return pnStatusResponseEntry;
 	}
 
@@ -200,9 +208,10 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 	@Override
 	public void saveDowntimeLogs(String functionalityStartYear, OffsetDateTime startDate, PnFunctionality functionality,
 			String startEventUuid, String uuid) {
+		
 		DowntimeLogs downtimeLogs = new DowntimeLogs();
 		downtimeLogs.setFunctionalityStartYear(functionalityStartYear);
-		OffsetDateTime newStartDate = DowntimeLogUtil.getGmtTimeFromOffsetDateTime(startDate);	
+		OffsetDateTime newStartDate = DowntimeLogUtil.getGmtTimeFromOffsetDateTime(startDate);
 		downtimeLogs.setStartDate(newStartDate);
 		downtimeLogs.setStartDateAttribute(newStartDate);
 		downtimeLogs.setStatus(PnFunctionalityStatus.KO);
@@ -211,7 +220,9 @@ public class DowntimeLogsServiceImpl implements DowntimeLogsService {
 		downtimeLogs.setUuid(uuid);
 		downtimeLogs.setFileAvailable(false);
 		downtimeLogs.setHistory("downtimeHistory");
+		log.debug("Inserting data {} in DynamoDB table {}", downtimeLogs.toString(), StringUtils.substringAfterLast(downtimeLogsTableName, "/"));
 		dynamoDBMapper.save(downtimeLogs);
+		log.info("Inserted data in DynamoDB table {}", StringUtils.substringAfterLast(downtimeLogsTableName, "/"));
 	}
 
 	@Override
